Multilenguaje - Se agregan traducciones Ingles y Español - Configuracion del build para construir /en/ y /es/ - Configuracion general de localizacion e internacionalizacion

--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -24,5 +24,5 @@
     </div>
   </div>
   <!--img src="assets/ref/footer.png" alt="" class="reference" style=""-->
-  <div class="rights" i18n>GUUD&#174; 2023 <span class="separator"></span> Todos los derechos reservados</div>
+  <div class="rights">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span></div>
 </div>
