--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -2,30 +2,30 @@
   <div class="display col-11 col-lg-10 col-xl-9 col-xxl-7 m-auto">
     <div class="row">
       <div class="col-12">
-        <h1>We are good people, <br> who wants the best of you!</h1>
-        <h4>Our purpose is create wellness and happiness around the world!</h4>
+        <h1 i18n>We are good people, <br> who wants the best of you!</h1>
+        <h4 i18n>Our purpose is create wellness and happiness around the world!</h4>
       </div>
     </div>
     <div class="icons row">
       <div class="col-12 col-md-4">
         <img src="assets/svg/aboutus/Mission.svg" class="svgic" onload="SVGInject(this)">
-        <h3>Mission:</h3>
-        <h5>Hack brains and shape bodies</h5>
+        <h3 i18n>Mission:</h3>
+        <h5 i18n>Hack brains and shape bodies</h5>
       </div>
       <div class="col-12 col-md-4">
         <img src="assets/svg/aboutus/Vision.svg" class="svgic" onload="SVGInject(this)">
-        <h3>Vision:</h3>
-        <h5>Find the Guud in YOU. Let's Go!</h5>
+        <h3 i18n>Vision:</h3>
+        <h5 i18n>Find the Guud in YOU. Let's Go!</h5>
       </div>
       <div class="col-12 col-md-4">
         <img src="assets/svg/aboutus/Core Values.svg" class="svgic" onload="SVGInject(this)">
-        <h3>Core values:</h3>
-        <h5>Passion, Innovation & Fun</h5>
+        <h3 i18n>Core values:</h3>
+        <h5 i18n>Passion, Innovation & Fun</h5>
       </div>
     </div>
     <div class="row">
       <div class="col-8 m-auto">
-        <h6>
+        <h6 i18n>
           P.S Be Good!
         </h6>
       </div>
