--- a/src/app/guudcomponents/formularios/becoach/becoach.component.html
+++ b/src/app/guudcomponents/formularios/becoach/becoach.component.html
@@ -1,20 +1,20 @@
 <form class="guudform">
   <div class="row" style="margin-bottom: 2rem;">
     <div class="col-12">
-      <h2>Coach</h2>
+      <h2 i18n>Coach</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-12 col-sm-6">
       <label class="labeledinput" [ngClass]="{'active': dataFormat.firstName}">
         <input type="text" [(ngModel)]="dataFormat.firstName" name="firstName">
-        <span>First Name</span>
+        <span i18n>First Name</span>
       </label>
     </div>
     <div class="col-12 col-sm-6">
       <label class="labeledinput" [ngClass]="{'active': dataFormat.lastName}">
         <input type="text" [(ngModel)]="dataFormat.lastName" name="lastName">
-        <span>Last Name</span>
+        <span i18n>Last Name</span>
       </label>
     </div>
   </div>
@@ -25,10 +25,10 @@
         onload="SVGInject(this)">
         <select [(ngModel)]="dataFormat.special" name="special">
           <option label=" " disabled></option>
-          <option [value]="'tips'">Tips</option>
-          <option [value]="'ejercicios'">Ejercicios</option>
+          <option [value]="'tips'" i18n>Tips</option>
+          <option [value]="'ejercicios'" i18n>Exercises</option>
         </select>
-        <span>Speciality</span>
+        <span i18n>Speciality</span>
       </label>
     </div>
   </div>
@@ -36,14 +36,14 @@
     <div class="col-12 col-sm-6">
       <label class="labeledinput" [ngClass]="{'active': dataFormat.instagram}">
         <input type="text" [(ngModel)]="dataFormat.instagram" name="instagram">
-        <span>Instagram</span>
+        <span i18n>Instagram</span>
       </label>
     </div>
     <div class="col-12 col-sm-6">
 
       <label class="labeledinput" [ngClass]="{'active': dataFormat.tiktok}">
         <input type="text" [(ngModel)]="dataFormat.tiktok" name="tiktok">
-        <span>Tiktok</span>
+        <span i18n>Tiktok</span>
       </label>
     </div>
   </div>
@@ -51,18 +51,18 @@
     <div class="col-12 col-sm-6">
       <label class="labeledinput" [ngClass]="{'active': dataFormat.email}">
         <input type="text" [(ngModel)]="dataFormat.email" name="email">
-        <span>Email</span>
+        <span i18n>Email</span>
       </label>
     </div>
     <div class="col-12 col-sm-6">
       <label class="labeledinput" [ngClass]="{'active': dataFormat.phone}">
         <input type="text" [(ngModel)]="dataFormat.phone" name="phone">
-        <span>Phone</span>
+        <span i18n>Phone</span>
       </label>
     </div>
   </div>
   <br>
   <div class="row">
-    <div class="col-8 m-auto"><button type="button">Send</button></div>
+    <div class="col-8 m-auto"><button type="button" i18n>Send</button></div>
   </div>
 </form>
