--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
@@ -7,16 +7,16 @@
   <div id="burgerdisplay">
     <div class="whitedecoration"></div>
     <ul class="top">
-      <li [routerLink]="'/'" (click)="_menuOpened=false;">Home</li>
-      <li [routerLink]="'/aboutus'" (click)="_menuOpened=false;">About us</li>
-      <li [routerLink]="'/history'" (click)="_menuOpened=false;">History</li>
-      <li>Caring & giving</li>
-      <li>Sustainability</li>
+      <li [routerLink]="'/'" (click)="_menuOpened=false;" i18n>Home</li>
+      <li [routerLink]="'/aboutus'" (click)="_menuOpened=false;" i18n>About us</li>
+      <li [routerLink]="'/history'" (click)="_menuOpened=false;" i18n>History</li>
+      <li i18n>Caring & giving</li>
+      <li i18n>Sustainability</li>
     </ul>
     <ul class="bottom">
-      <li>Want to be...</li>
-      <li [routerLink]="'/coach'" (click)="_menuOpened=false;">Coach</li>
-      <li [routerLink]="'/supplier'" (click)="_menuOpened=false;">Supplier</li>
+      <li i18n>Want to be...</li>
+      <li [routerLink]="'/coach'" (click)="_menuOpened=false;" i18n>Coach</li>
+      <li [routerLink]="'/supplier'" (click)="_menuOpened=false;" i18n>Supplier</li>
     </ul>
   </div>
 </div>
