--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,8 @@ $inputtransition: 0.13s;
 }
 
 .labeledinput *,
-.menubar * {
+.menubar *,
+.modalframe {
   transition: all $inputtransition ease-out;
   -webkit-transition: all $inputtransition ease-out;
   -moz-transition: all $inputtransition ease-out;
@@ -44,6 +45,14 @@ $inputtransition: 0.13s;
 
   100% {
     transform: rotate(0deg);
+  }
+}
+
+
+[disabled] {
+  opacity: .3;
+  &:hover {
+    cursor: pointer;
   }
 }
 
@@ -240,16 +249,16 @@ select,
     //padding: 0 1.8rem 0 0;
   }
 
-  button {
-    width: 100%;
-    height: 4.6rem;
-    border: none;
-    border-radius: 6rem;
-    background-color: #68e242;
-    color: #FFF;
-    font-size: 1.7rem;
-    box-shadow: 0 1rem 4rem -2rem #000;
-  }
+}
+button {
+  width: 100%;
+  height: 4.6rem;
+  border: none;
+  border-radius: 6rem;
+  background-color: #68e242;
+  color: #FFF;
+  font-size: 1.7rem;
+  box-shadow: 0 1rem 4rem -2rem #000;
 }
 
 .phrase {
