Ajustes Generales - Se agregan localizaciones de mensajes para envio de correo - Se comentariza logica para mandar correos desde angular - Se quita el token de sgMail

--- a/src/app/guudcomponents/formularios/becoach/becoach.component.html
+++ b/src/app/guudcomponents/formularios/becoach/becoach.component.html
@@ -64,6 +64,6 @@
   </div>
   <br>
   <div class="row">
-    <div class="col-8 m-auto"><button type="button" (click)="_guudapi.SendEmail(formData.form.value, 'New Lead Coach')" [disabled]="_checkvalid()" i18n>Send</button></div>
+    <div class="col-8 m-auto"><button type="button" (click)="_submit(formData.form.value)" [disabled]="_checkvalid()" i18n>Send</button></div>
   </div>
 </form>
