Mejoras despues de la revision de Google

--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="footerarea col-10 col-sm-7 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
     <div class="row">
       <div class="col-12 col-md-3 m-auto">
-        <img [routerLink]="'/'" src="assets/logotipo.svg" alt="" class="logo" i18n-alt i18n-src>
+        <img [routerLink]="'/'" src="assets/logotipo.svg" alt="GUUD" class="logo" i18n-alt i18n-src>
       </div>
       <ul class="sections1 col-6 col-md-3 m-auto">
         <li [routerLink]="'/aboutus'" i18n>About us</li>
