--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -1,4 +1,4 @@
-<div class="menubar">
+<nav class="menubar">
   <img [routerLink]="'/'" src="assets/logotipo.svg" alt="Logo" class="logo" i18n-alt i18n-src>
 
   <ul class="navigation">
@@ -16,4 +16,4 @@
   <guud-burguermenu></guud-burguermenu>
   <guud-langmenu></guud-langmenu>
 
-</div>
+</nav>
