--- a/src/app/guudcomponents/footer/footer.component.scss
+++ b/src/app/guudcomponents/footer/footer.component.scss
@@ -57,7 +57,7 @@
   height: 6vh;
   font-size: 0.9rem;
   line-height: 2.8rem;
-  color: #ddd;
+  color: #707070;
 }
 .separator {
   border-left: 0.1rem solid #ddd;
