--- a/src/app/guudcomponents/formularios/besupplier/besupplier.component.html
+++ b/src/app/guudcomponents/formularios/besupplier/besupplier.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-12 col-sm-6">
       <label class="labeledinput" [ngClass]="{'active': dataFormat.filename}">
-        <img class="inputdeco" src="assets/svg/supplier/Clip.svg"
+        <img class="inputdeco" src="assets/svg/supplier/Clip.svg" alt="clip"
         onload="SVGInject(this)">
         <input type="file" (change)="_setfiles($event)" ngModel name="filename" accept="image/*">
         <div class="fileinput"><p>{{dataFormat.filename}}</p></div>
