--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
@@ -1,8 +1,8 @@
-<div class="burguermenu">
+<nav class="burguermenu">
   <input type="checkbox" id="burgerstatus" style="display: none;" [(ngModel)]="_menuOpened">
   <label class="mobileNavigation" for="burgerstatus">
-    <img class="burgertoggler" id="openburger" src="assets/svg/menu.svg">
-    <img class="burgertoggler" id="closeburguer" src="assets/svg/close.svg">
+    <img alt="menu" class="burgertoggler" id="openburger" src="assets/svg/menu.svg">
+    <img alt="close" class="burgertoggler" id="closeburguer" src="assets/svg/close.svg">
   </label>
   <div id="burgerdisplay">
     <div class="whitedecoration"></div>
@@ -19,4 +19,4 @@
       <li [routerLink]="'/supplier'" (click)="_menuOpened=false;" i18n>Supplier</li>
     </ul>
   </div>
-</div>
+</nav>
