--- a/src/app/guudcomponents/formularios/becoach/becoach.component.html
+++ b/src/app/guudcomponents/formularios/becoach/becoach.component.html
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="col-12">
       <label class="labeledinput" [ngClass]="{'active': dataFormat.special}">
-        <img class="inputdeco" src="assets/svg/cheveron-down.webp" alt="arrow">
+        <img class="inputdeco" src="assets/svg/cheveron-down.webp" alt="arrow" width="36" height="36">
         <select [(ngModel)]="dataFormat.special" name="special">
           <option label=" " disabled></option>
           <option [value]="'tips'" i18n>Tips</option>
