--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -8,17 +8,17 @@
     </div>
     <div class="icons row">
       <div class="col-12 col-md-4">
-        <img alt="iconMission" src="assets/svg/aboutus/Mission.webp" class="svgic">
+        <img alt="iconMission" src="assets/svg/aboutus/Mission.webp" class="svgic" width="112" height="112">
         <h3 i18n>Mission:</h3>
         <h5 i18n>Hack brains and shape bodies</h5>
       </div>
       <div class="col-12 col-md-4">
-        <img alt="iconVision" src="assets/svg/aboutus/Vision.webp" class="svgic">
+        <img alt="iconVision" src="assets/svg/aboutus/Vision.webp" class="svgic" width="112" height="112">
         <h3 i18n>Vision:</h3>
         <h5 i18n>Find the Guud in YOU. Let's Go!</h5>
       </div>
       <div class="col-12 col-md-4">
-        <img alt="iconCoreValues" src="assets/svg/aboutus/Core Values.webp" class="svgic">
+        <img alt="iconCoreValues" src="assets/svg/aboutus/Core Values.webp" class="svgic" width="112" height="112">
         <h3 i18n>Core values:</h3>
         <h5 i18n>Passion, Innovation & Fun</h5>
       </div>
