--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
@@ -1,8 +1,8 @@
 <nav class="burguermenu">
   <input type="checkbox" id="burgerstatus" style="display: none;" [(ngModel)]="_menuOpened">
   <label class="mobileNavigation" for="burgerstatus">
-    <img alt="menu" class="burgertoggler" id="openburger" src="assets/svg/menu.webp">
-    <img alt="close" class="burgertoggler" id="closeburguer" src="assets/svg/close.webp">
+    <img alt="menu" class="burgertoggler" id="openburger" src="assets/svg/menu.webp" width="30" height="20">
+    <img alt="close" class="burgertoggler" id="closeburguer" src="assets/svg/close.webp" width="25" height="25">
   </label>
   <div id="burgerdisplay">
     <div class="whitedecoration"></div>
