--- a/src/app/guudcomponents/modales/modales.component.scss
+++ b/src/app/guudcomponents/modales/modales.component.scss
@@ -7,6 +7,7 @@
   background-color: #000000b0;
   opacity: 0;
   z-index: -1;
+  overflow: hidden;
   &.modalactive{
     z-index: 3;
     opacity: 1;
