--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -5,7 +5,7 @@
         <guudform-becoach></guudform-becoach>
       </div>
       <div class="col-xl-6 col-md-5 col-sm-8 m-auto">
-        <img alt="GUUD Coach" src="assets/svg/coach/Guud-Coach@2x.webp" alt="" class="formimage">
+        <img alt="GUUD Coach" src="assets/svg/coach/Guud-Coach@2x.webp" alt="" class="formimage" width="700" height="870">
       </div>
     </div>
   </div>
