--- a/src/app/views/history/history.component.html
+++ b/src/app/views/history/history.component.html
@@ -1,3 +1,3 @@
 <div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;">
-  <img alt="play button" src="assets/svg/playbtn.webp" alt="" class="playbutton">
+  <img alt="play button" src="assets/svg/playbtn.webp" alt="" class="playbutton" width="100" height="900">
 </div>
