Resolucion especifica y nuevas secciones

--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
@@ -10,8 +10,8 @@
       <li [routerLink]="'/'" (click)="_menuOpened=false;" i18n>Home</li>
       <li [routerLink]="'/aboutus'" (click)="_menuOpened=false;" i18n>About us</li>
       <li [routerLink]="'/history'" (click)="_menuOpened=false;" i18n>History</li>
-      <li i18n>Caring & giving</li>
-      <li i18n>Sustainability</li>
+      <li [routerLink]="'/caring'" (click)="_menuOpened=false;" i18n>Caring & giving</li>
+      <li [routerLink]="'/sustainability'" (click)="_menuOpened=false;" i18n>Sustainability</li>
     </ul>
     <ul class="bottom">
       <li i18n>Want to be...</li>
