--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -4,9 +4,9 @@
   <ul class="navigation">
     <li [routerLink]="'/aboutus'" style="background-color:#fff;" i18n>About us</li>
     <li [routerLink]="'/history'" style="background-color:#fff;" i18n>History</li>
-    <li style="background-color:#fff;" i18n>Caring & giving</li>
+    <li style="background-color:#fff;" [routerLink]="'/caring'" i18n>Caring & giving</li>
     <!--[routerLink]="'/caring'"-->
-    <li style="background-color:#fff;" i18n>Sustainability</li>
+    <li style="background-color:#fff;" [routerLink]="'/sustainability'" i18n>Sustainability</li>
     <!--[routerLink]="'/sustainability'"-->
     <li class="bluefont nocursor" i18n>Want to be...</li>
     <li class="bluefont " [routerLink]="'/supplier'" style="font-weight:bold;" i18n>Supplier</li>
