--- a/src/app/views/caring/caring.component.html
+++ b/src/app/views/caring/caring.component.html
@@ -1,1 +1,28 @@
-<p>caring works!</p>
+<div class="displayshadow">
+  <div class="display col-11 col-lg-10 col-xl-9 col-xxl-7 m-auto">
+    <div class="row">
+      <div class="col-12">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h4 style="font-size: 2rem !important;" i18n>GUUD <br>Caring & Giving</h4><br>
+        <h4 i18n>Our purpose is create wellness and happiness around the world!</h4><br>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-8 m-auto">
+        <h6 i18n>
+          P.S Be Good!
+        </h6>
+      </div>
+    </div>
+    <br>
+  </div>
+</div>
+
+<!--img src="assets/ref/aboutus.png" alt="" class="reference" style="width: 100vw;height: 100vh;left: 3.5rem;"-->
