Actualizacion de Lang

--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -11,8 +11,8 @@
       </ul>
       <ul class="sections2 col-6 col-md-3 m-auto">
         <li i18n>Stories</li>
-        <li i18n>Caring & giving</li>
-        <li i18n>Sustainability</li>
+        <li [routerLink]="'/caring'" i18n>Caring & giving</li>
+        <li [routerLink]="'/sustainability'" i18n>Sustainability</li>
       </ul>
       <ul class="social col-12 col-md-3 m-auto">
         <li i18n>Follow us!</li>
