--- a/src/app/views/caring/caring.component.html
+++ b/src/app/views/caring/caring.component.html
@@ -9,7 +9,7 @@
         <br>
         <br>
         <br>
-        <h4 style="font-size: 2rem !important;" i18n>GUUD <br>Caring & Giving</h4><br>
+        <h4 style="font-size: 2rem !important;" i18n>GUUD <br><br>Caring & Giving</h4><br>
         <h4 i18n>Our purpose is create wellness and happiness around the world!</h4><br>
       </div>
     </div>
@@ -24,5 +24,3 @@
     <br>
   </div>
 </div>
-
-<!--img src="assets/ref/aboutus.png" alt="" class="reference" style="width: 100vw;height: 100vh;left: 3.5rem;"-->
