--- a/src/assets/guudstyles/_inputs.scss
+++ b/src/assets/guudstyles/_inputs.scss
@@ -1,3 +1,24 @@
+.guudform {
+  padding: 4rem 0.6rem;
+}
+guudview-supplier .formimage, guudview-coach .formimage{
+  width: 36.6vw;
+  position: relative;
+  margin: auto;
+  display: block;
+  height: unset;
+}
+.fileinput {
+  z-index: 0;
+
+  p {
+    width: 100%;
+    height: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
+
 input:not([type="checkbox"], [type="radio"]),
 select,
 .fileinput {
@@ -47,7 +68,7 @@ select,
   }
 
   span:not(.inputdeco) {
-    color: #a2a1a1;
+    color: $gray-font;
     position: absolute;
     left: 0;
     top: 1.75rem;
@@ -63,26 +84,6 @@ select,
   }
 }
 
-.fileinput {
-  z-index: 0;
-
-  p {
-    width: 100%;
-    height: 100%;
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
-}
-
-.guudform {
-  padding: 4rem 0.6rem;
-
-  [class*="col-"],
-  .row {
-    //padding: 0 1.8rem 0 0;
-  }
-
-}
 button {
   width: 100%;
   height: 4.6rem;
@@ -91,5 +92,5 @@ button {
   background-color: $contrastbackground;
   color: $mainbackground;
   font-size: 1.7rem;
-  box-shadow: 0 1rem 4rem -2rem #000;
+  box-shadow: 0 1rem 4rem -2rem $shadowcolor;
 }
