--- a/src/assets/guudstyles/guudstyles.scss
+++ b/src/assets/guudstyles/guudstyles.scss
@@ -1,21 +1,42 @@
 @import '_variables.scss';
 @import '_animations.scss';
+@import '_fonts.scss';
 @import '_inputs.scss';
 @import '_menus.scss';
 
+#socialacc {
+  position: absolute;
+  bottom: 1rem;
+  font-size: 0.7rem;
+  opacity: .3;
+}
 
+.playbutton {
+  display: block;
+  margin: auto;
+  padding: 25rem 0;
+}
 
+[disabled] {
+  opacity: .3;
+  &:hover {
+    cursor: pointer;
+  }
+}
 
+.displayshadow {
+  box-shadow: inset 0 10px 100px $shadowcolor, inset 0 0 100px $shadowcolor;
+  padding-top: 3rem;
+}
 
-
-
-
-
-
-
-
-
-
+.whitedecoration {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 12vh;
+  z-index: 0;
+  background-color: $mainbackground;
+}
 
 
 
