--- a/src/assets/guudstyles/_variables.scss
+++ b/src/assets/guudstyles/_variables.scss
@@ -1,5 +1,5 @@
 $mainfont: Exo;
-$secondaryfont: Verveine;
+$secondaryfont: Verveine, Exo;
 $gray-font: #707070;
 $blue-font: #1b4544;
 $shadowcolor: #d4d4d4;
