--- a/src/app/guudcomponents/individuales/imageplacer/imageplacer.component.scss
+++ b/src/app/guudcomponents/individuales/imageplacer/imageplacer.component.scss
@@ -1,5 +1,5 @@
 .phrase.ondisplay {
-  opacity: 1;
+  display: block;
 }
 
 
@@ -187,7 +187,7 @@ img {
   img {
     height: unset;
     &:not(.ondisplay,[alt="GUUD"],[alt="slogan"]){
-      opacity: 0;
+      display: none;
     }
 
     &[alt="GUUD"] {
@@ -203,7 +203,7 @@ img {
     }
 
     &[id="webarrow1"],&[id="webarrow2"],&[id="webarrow3"],&[id="webarrow4"],&[id="webarrow5"]{
-      opacity: 0;
+      display: none;
     }
 
     &[id="webphrase9"] {
