--- a/src/app/guudcomponents/individuales/imageplacer/imageplacer.component.scss
+++ b/src/app/guudcomponents/individuales/imageplacer/imageplacer.component.scss
@@ -1,5 +1,5 @@
 .phrase.ondisplay {
-  display: block;
+  opacity: 1;
 }
 
 
@@ -187,7 +187,7 @@ img {
   img {
     height: unset;
     &:not(.ondisplay,[alt="GUUD"],[alt="slogan"]){
-      display: none;
+      opacity: 0;
     }
 
     &[alt="GUUD"] {
